// Copyright 2023 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package databend_proto;

message OwnershipInfo {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string role = 1;
  OwnershipObject object = 2;
}

message OwnershipObject {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  message OwnershipDatabaseObject {
    string catalog = 1;
    uint64 db = 2;
  }

  message OwnershipTableObject {
    string catalog = 1;
    uint64 db = 2;
    uint64 table = 3;
  }

  message OwnershipUdfObject {
    string udf = 1;
  }

  message OwnershipStageObject {
    string stage = 1;
  }

  message OwnershipWarehouseObject {
    string id = 1;
  }

  oneof object {
    OwnershipDatabaseObject database = 1;
    OwnershipTableObject table = 2;
    OwnershipUdfObject udf = 3;
    OwnershipStageObject stage = 4;
    OwnershipWarehouseObject warehouse = 5;
  }
}
